fitting on ios w fixed footer + playsinline
+ footer stays put. but sacrificed scrolling of map. need that back.
is critical
+ added playsinline to videos. were opening fullscreen

--- a/src/components/navigation/NavMobile/NavMobile.scss
+++ b/src/components/navigation/NavMobile/NavMobile.scss
@@ -11,6 +11,7 @@
 .hamburger-trigger {
   position: absolute;
   top: 10px;
+  top: 10px;
   left: 10px;
   z-index: 1;
   width: 40px;
