--- a/src/utils/modals.scss
+++ b/src/utils/modals.scss
@@ -316,6 +316,8 @@ img {
         display: block;
         top: 10px;
         right: 10px;
+        width: 35px;
+        padding: 0 0 2px;
       }
 
       &.info-card--about {
@@ -374,10 +376,19 @@ img {
   background-color: rgba(0, 22, 51, 1);
 
   @include bp(mob) {
+    top: 0;
+    left: 0;
+    transform: none;
     width: 100vw;
-    height: 100vh;
+    // height: 100vh;
+    height: 100%;
     margin: 0;
     border: 0;
+
+    .mapboxgl-popup-close-button {
+      width: 35px;
+      padding: 0 0 2px;
+    }
   }
 
   .project-iframe {
